#############################################
# Set up configration
#############################################
[metadata]
name = featurematch
version = 0.0.1
description = a package for features-disease predictions
#long_description = file: README.rst

url = https://github.com/Chengyao-Peng/featurematch

author = Chengyao Peng
author_email = pppchengyao@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Lisence :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Bioinformatics
    feature-disease prediction
    HPO
    NRL


[options]
install_requires =
    pykeen
    pandas
    xlrd
    xlutils
    click
    pronto
    matplotlib
    networkx
    node2vec

# where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    featurematch = featurematch.cli:main
