#############################################
# Set up configration
#############################################
[metadata]
name = CADA
version = 0.0.1
description = a package for disease and gene predictions based on phenotypes
#long_description = file: README.rst

url = https://github.com/Chengyao-Peng/CADA

author = Chengyao Peng
author_email = pppchengyao@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Lisence :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Bioinformatics
    feature-disease prediction
    HPO
    NRL


[options]
install_requires =
    mygene
    tensorflow
    pandas
    numpy
    sklearn
    xlrd
    xlutils
    click
    pronto==1.1.3
    matplotlib
    networkx
    node2vec

# where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    CADA = CADA.cli:main
